[gd_scene load_steps=2 format=3 uid="uid://buyn0b5ravut6"]

[ext_resource type="Script" uid="uid://denypdr5y37ua" path="res://game/DevPanel.gd" id="1_8051s"]

[node name="DevPanel" type="CanvasLayer"]
script = ExtResource("1_8051s")

[node name="DevPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -364.0
offset_right = 364.0
offset_bottom = 520.0
grow_horizontal = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DevPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 720.0
offset_bottom = 512.0

[node name="VBoxContainer" type="VBoxContainer" parent="DevPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="DevPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "=== ПАНЕЛЬ РАЗРАБОТЧИКА ==="
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="DevPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatusList" type="ItemList" parent="DevPanel/MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(550, 150)
layout_mode = 2
auto_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="DevPanel/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="AddStatusButton" type="Button" parent="DevPanel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Добавить статус"

[node name="RemoveStatusButton" type="Button" parent="DevPanel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Удалить статус"

[node name="Label2" type="Label" parent="DevPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ХАРАКТЕРИСТИКИ"
horizontal_alignment = 1

[node name="StatsContainer" type="GridContainer" parent="DevPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Сила:"
horizontal_alignment = 1

[node name="StrengthSpin" type="SpinBox" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
z_index = 1001
layout_mode = 2
size_flags_vertical = 0
max_value = 1000.0

[node name="Label2" type="Label" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Крепость:"

[node name="FortitudeSpin" type="SpinBox" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
max_value = 1000.0

[node name="Label3" type="Label" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Выносливость:"

[node name="EnduranceSpin" type="SpinBox" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
max_value = 1000.0

[node name="Label4" type="Label" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Удача:"

[node name="LuckSpin" type="SpinBox" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
max_value = 1000.0

[node name="ApplyStatsButton" type="Button" parent="DevPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Применить"

[node name="Label3" type="Label" parent="DevPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ДЕЙСТВИЯ:"
horizontal_alignment = 1

[node name="ActionsContainer" type="HBoxContainer" parent="DevPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HealButton" type="Button" parent="DevPanel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Полное лечение"

[node name="LevelUpButton" type="Button" parent="DevPanel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Уровень UP"

[node name="AddExpButton" type="Button" parent="DevPanel/MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "+1000 опыта"

[node name="CloseButton" type="Button" parent="DevPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Закрыть"

[connection signal="pressed" from="DevPanel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/AddStatusButton" to="." method="_on_add_status_button_pressed"]
[connection signal="pressed" from="DevPanel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/RemoveStatusButton" to="." method="_on_remove_status_button_pressed"]
[connection signal="pressed" from="DevPanel/MarginContainer/VBoxContainer/StatsContainer/ApplyStatsButton" to="." method="_on_apply_stats_button_pressed"]
[connection signal="pressed" from="DevPanel/MarginContainer/VBoxContainer/ActionsContainer/HealButton" to="." method="_on_heal_button_pressed"]
[connection signal="pressed" from="DevPanel/MarginContainer/VBoxContainer/ActionsContainer/LevelUpButton" to="." method="_on_level_up_button_pressed"]
[connection signal="pressed" from="DevPanel/MarginContainer/VBoxContainer/ActionsContainer/AddExpButton" to="." method="_on_add_exp_button_pressed"]
[connection signal="pressed" from="DevPanel/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
